--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h1 class="text-center mb-5">Bienvenue sur Memory Game</h1>
 
       <a href="/game" class="btn btn-primary w-75 btn-lg mt-3">Commencer</a>
-      <p class="mt-3"><small>Le record est de </small></p>
+      <p class="mt-3 d-none"><small>Le record est de </small></p>
 
     </div>
   </body>
