Printing of all cards and random organization

--- a/game.html
+++ b/game.html
@@ -29,6 +29,10 @@
     <div class="w-75 h-100 d-flex flex-column justify-content-center align-items-center">
       <h1 class="text-center mb-5">Bienvenue sur Memory Game</h1>
 
+      <div id="game-board" class="w-75 h75">
+      </div>
     </div>
+
+    <script src="script/script.js"></script>
   </body>
 </html>
