Add victory and block click when 2 card are clicked

--- a/game.html
+++ b/game.html
@@ -29,7 +29,12 @@
     <div class="w-75 h-100 d-flex flex-column justify-content-center align-items-center">
       <h1 class="text-center mb-5">Bienvenue sur Memory Game</h1>
 
-      <div id="game-board" class="w-75 h75">
+      <div id="game-board" class="w-75 h-75">
+      </div>
+
+      <div id="game-end" class="w-75 h-75 d-flex flex-column justify-content-center align-items-center d-none">
+        <h2 class="text-big">Bravo vous avez gagné</h2>
+        <a href="/game.html" class="btn btn-primary w-75 btn-lg mt-3">Recommencer</a>
       </div>
     </div>
 
