--- a/game.html
+++ b/game.html
@@ -27,7 +27,8 @@
 
   <body class="vh-100 vw-100 d-flex justify-content-center">
     <div class="w-75 h-100 d-flex flex-column justify-content-center align-items-center">
-      <h1 class="text-center mb-5">Bienvenue sur Memory Game</h1>
+      <h1 class="text-center mb-5">Bienvenue sur Memory Game <span id="points">0</span></h1>
+      <p id="timer">00:00:00</p>
 
       <div id="game-board" class="w-75 h-75">
       </div>
