--- a/game.html
+++ b/game.html
@@ -27,8 +27,11 @@
 
   <body class="vh-100 vw-100 d-flex justify-content-center">
     <div class="w-75 h-100 d-flex flex-column justify-content-center align-items-center">
-      <h1 class="text-center mb-5">Bienvenue sur Memory Game <span id="points">0</span></h1>
-      <p id="timer">00:00:00</p>
+      <h1 class="text-center mb-5">Bienvenue sur Memory Game</h1>
+      <div class="w-75 d-flex justify-content-around m-0">
+        <p>Score : <span id="points">0</span></p>
+        <p>Temps : <span id="timer">00:00:00</span></p>
+      </div>
 
       <div id="game-board" class="w-75 h-75">
       </div>
